cmake_minimum_required(VERSION 3.12)

if(MSVC)
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/execution_charset:utf-8>")
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/source_charset:utf-8>")
endif()

if(WIN32)
    if(MSVC)
        set(VCPKG_TARGET_TRIPLET x64-windows)
    else()
        set(VCPKG_TARGET_TRIPLET x64-mingw-dynamic)
    endif()
else()
    set(VCPKG_TARGET_TRIPLET x64-linux)
endif()

set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}\\scripts\\buildsystems\\vcpkg.cmake)

project(cube)
set(CMAKE_CXX_STANDARD 23)

include_directories(packages/include)
find_package(SDL3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(assimp CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(cJSON CONFIG REQUIRED)
set(CUBE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
add_subdirectory(packages)
add_subdirectory(projects)
